--- a/apps/web/lib/i18n/locales/en/translation.json
+++ b/apps/web/lib/i18n/locales/en/translation.json
@@ -189,10 +189,49 @@
       "underline": "Underline",
       "strikethrough": "Strikethrough",
       "code": "Code",
+      "code_block": "codeBlock",
       "highlight": "Highlight",
       "align_left": "Left Align",
       "align_center": "Center Align",
-      "align_right": "Right Align"
+      "align_right": "Right Align",
+      "markdown_shortcuts": {
+        "heading": {
+          "label": "Heading",
+          "example": "# H1, ## H2, ### H3"
+        },
+        "bold": {
+          "label": "Bold",
+          "example": "**text** or CTRL+b"
+        },
+        "italic": {
+          "label": "Italic",
+          "example": "*Italic* or _Italic_ or CTRL+i"
+        },
+        "blockquote": {
+          "label": "Blockquote",
+          "example": "> Blockquote"
+        },
+        "ordered_list": {
+          "label": "Ordered List",
+          "example": "1. List item"
+        },
+        "unordered_list": {
+          "label": "Unordered List",
+          "example": "- List item"
+        },
+        "divider": {
+          "label": "Divider",
+          "example": "---"
+        },
+        "inline_code": {
+          "label": "Inline Code",
+          "example": "`Code`"
+        },
+        "block_code": {
+          "label": "Block Code",
+          "example": "``` + space"
+        }
+      }
     }
   },
   "toasts": {
